[project]
name = "hierarchial-random-walk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easydict==1.10",
    "fastapi==0.100.1",
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "plum-dispatch==2.1.1",
    "pyg-lib==0.4.0+pt22cu118",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "torch-cluster==1.6.3+pt22cu118",
    "torch-geometric==2.5.0",
    "torch-scatter==2.1.2+pt22cu118",
    "torch-sparse==0.6.18+pt22cu118",
    "torch-spline-conv==1.2.2+pt22cu118",
    "wandb==0.15.8",
]
